<resources>
    <string name="app_name">Assignment7</string>
    <string name="hint_meetingTitle">Meeting Title</string>
    <string name="meeting_info">Meeting Information</string>
    <string name="hint_meetingDate">Date</string>
    <string name="hint_meetingTime">Time</string>
    <string name="button_submit">Submit</string>
    <string name="button_summary">Summary</string>
    <string name="button_search">Search</string>
    <string name="button_update">Update</string>
    <string name="meeting_summaryTitle">Summary Page</string>
    <string name="hint_meetingLocation">Location</string>
    <string name="hint_meetingParticipants">Participant</string>
    <string name="button_inputMeeting">Add Meeting</string>
    <string name="search_meeting_title">Search Meeting</string>
    <string name="hint_autoComplete_date">e.g 21/9/2023</string>
    <string name="tw_search_result_txt">Search Result:</string>
    <string name="button_back">Back</string>
    <string name="hint_autoComplete_time">e.g 17:30</string>
    <string name="hint_autoComplete_participants">Name</string>

</resources>